[package]
name = "rustgorithms-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustgorithms_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.1"

[dependencies.sorting]
path = "./sorting"
